# gpah

./: .gitignore  LICENSE  Makefile  README.html  README.md  gpah.cabal  gpanalysis.cabal  hackage.py  xp.cabal
results/: c_analysis.csv  d_analysis.csv  d_analysis.txt  d_analysis___.csv  d_analysis____.csv  d_analysis_w_cpp.csv  d_analysis_wo_cpp.csv  e_analysis.csv  e_analysis.txt  e_analysis_w_cpp.csv  f_analysis.csv  f_analysis.txt  f_analysis_w_cpp.csv  f_analysis_wo_cpp.csv  i_analysis.csv  i_analysis_w_cpp.csv  i_output.txt  misc_date.csv  misc_date.txt  misc_date_wo_cpp.csv  misc_hackage.csv  misc_hackage.txt  misc_hackage_w_cpp.csv  misc_hackage_wo_cpp.csv  uni_analysis.csv  uni_analysis.txt  uni_analysis_w_cpp.csv  uni_analysis_wo_cpp.csv
src/: Base.hs  Conf.hs  Cpp.hs  Date.hs  Derive.hs  Deriving.hs  Function.hs  Hackage.hs  Interp.hs  Main.hs  Upl.hs  Utils.hs
src/Analysis/: Conf.hs  Cpp.hs  Utils.hs
src/Analysis/Deriving/: Base.hs  Mining.hs  Parsing.hs
src/Analysis/Error/: Base.hs  Mining.hs  Parsing.hs
src/Analysis/Function/: Base.hs  Mining.hs  Parsing.hs
src/Analysis/Misc/: Date.hs  Hackage.hs
src/Analysis/Uni/: Base.hs  Mining.hs  Parsing.hs
src/Cpp/: Analyze.hs  Base.hs  PPrint.hs
src/Date/: Analyze.hs  Base.hs  PPrint.hs
src/Derive/: Analyze.hs  Base.hs  PPrint.hs
src/Deriving/: Analyze.hs  Base.hs  PPrint.hs
src/Function/: Analyze.hs  Base.hs  PPrint.hs
src/Generics/GPAH/: Base.hs  Conf.hs  Cpp.hs  Date.hs  Derive.hs  Deriving.hs  Function.hs  Hackage.hs  Interp.hs  Main.hs  Upl.hs  Utils.hs
src/Generics/GPAH/Cpp/: Analyze.hs  Base.hs  PPrint.hs
src/Generics/GPAH/Date/: Analyze.hs  Base.hs  PPrint.hs
src/Generics/GPAH/Derive/: Analyze.hs  Base.hs  PPrint.hs
src/Generics/GPAH/Deriving/: Analyze.hs  Base.hs  PPrint.hs
src/Generics/GPAH/Function/: Analyze.hs  Base.hs  PPrint.hs
src/Generics/GPAH/Interp/: Analyze.hs  Base.hs  PPrint.hs
src/Generics/GPAH/Upl/: Analyze.hs  Base.hs  PPrint.hs
src/Hackage/: Analyze.hs  Base.hs  PPrint.hs
src/Interp/: Analyze.hs  Base.hs  PPrint.hs
src/Upl/: Analyze.hs  Base.hs  PPrint.hs
