name:                  gpah
version:               0.0.1
synopsis:              Generic Programming Use in Hackage
description:           Generic Programming Use in Hackage:
                       Project for master course "Generic Programming" at Utrecht University
author:                Nikolaos Bezirgiannis, Sean Leather, Johan Jeuring
maintainer:            NikolaosBezirgiannis <n.bezirgiannis@students.uu.nl>
stability:             provisional
build-type:            Simple
cabal-version:         >= 1.8
                      
executable gpah
  main-is:             Main.hs
  build-depends:       base, cmdargs, haskell-src-exts, filepath, Cabal >= 1.16.0, directory, deepseq, bytestring, containers >= 0.4.2.0, syb, uniplate, process, csv, hint, network, HTTP, tar, zlib, uu-parsinglib
  ghc-options:         -rtsopts  -with-rtsopts=-K50m
  hs-source-dirs:      src
