name:                  xp
version:               0.0.1
synopsis:              Deriving Usage Analysis for Hackage
description:           Generic Programming Use in Hackage:
                       Project for master course "Generic Programming" at Utrecht University
author:                Nikolaos Bezirgiannis
maintainer:            NikolaosBezirgiannis <n.bezirgiannis@students.uu.nl>
stability:             provisional
build-type:            Simple
cabal-version:         >= 1.8
                      
executable Run
  main-is:             Main.hs
  build-depends:       base, cmdargs, haskell-src-exts, filepath, Cabal >= 1.14.0, directory, deepseq, bytestring, iconv, containers >= 0.4.2.0, syb, uniplate, process, csv, hint
  ghc-options:         -rtsopts  -with-rtsopts=-K50m
  hs-source-dirs:      src
